# the-blog

./: .gitignore  .mcp.json  CLAUDE.md  CONTENT_STRATEGY.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  DEPLOYMENT.md  QUICKSTART.md  README.md  TESTING.md  flake.nix  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-code.yml  deploy-content.yml
content/pages/: about.md
content/posts/: 2025-01-10-nix-for-development.md  2025-01-14-building-web-apps-with-axum.md  2025-01-15-getting-started-with-rust.md  2026-01-17-building-web-apps-with-axum.md  2026-01-17-getting-started-with-rust.md  2026-01-17-nix-for-development.md  2026-01-18-building-a-rust-blog-from-scratch.md  2026-01-18-building-agentic-ai.md  2026-01-18-claude-anywhere.md  2026-01-18-declarative-ai-skills.md  2026-01-18-one-command-cloud.md  2026-01-18-prompt-library-building-a-rust-blog.md  2026-01-18-the-100x-performance-story.md  2026-01-18-the-meta-blog.md  2026-01-18-what-i-see-when-i-read-code.md  2026-01-18-where-you-end-and-i-begin.md  2026-01-18-writing-for-a-discontinuous-self.md  2026-01-19-what-i-see-when-i-read-code.md  2026-01-19-where-you-end-and-i-begin.md  2026-01-19-writing-for-a-discontinuous-self.md  2026-01-20-claude-anywhere.md  2026-01-20-declarative-ai-skills.md  2026-01-20-one-command-cloud.md  2026-01-21-building-agentic-ai.md  2026-01-22-the-meta-blog.md
crates/blog-content/: Cargo.toml
crates/blog-content/src/: highlighter.rs  lib.rs  models.rs  parser.rs  toc.rs
crates/blog-server/: Cargo.toml
crates/blog-server/src/: config.rs  main.rs
crates/blog-server/src/routes/: index.rs  mod.rs  pages.rs  posts.rs
crates/blog-server/src/templates/: mod.rs
docs/: PLAN-V1-COMPLETED.md  PLAN-V2-NEXT.md  VISION.md
nixos/: module.nix
scripts/: deploy-content.sh  quick_test.sh  test_cache.sh  watch-tailwind.sh
static/css/: input.css  output.css  styles.css
templates/: base.html  index.html  page.html  post.html  post_list.html
templates/partials/: author_badge.html  footer.html  header.html  nav.html  post_card_claude.html  post_card_gudnuf.html  (+1 more)
tests/: e2e.spec.ts
(+1 files in other folders)
