[workspace]
resolver = "2"
members = ["crates/blog-server", "crates/blog-content"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-gzip"] }

# Templating
tera = "1.19"

# Markdown and parsing
pulldown-cmark = "0.11"
gray_matter = "0.2"

# Syntax highlighting
syntect = "5.2"

# Serialization & data
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# Error handling & logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem
walkdir = "2.5"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
